# ENGG57_LABIV_Plataforma-para-Jogos-em-FPGA

./: .gitignore  README.md
AltoNivel/emulador_lab_4/: pyproject.toml
AltoNivel/emulador_lab_4/games/: teste1.txt
AltoNivel/emulador_lab_4/jogo_emulador/: game.py  instruction_interpreter.py  instruction_reader.py  main.py  memory.py  utils.py
BmpToFiles/: birds.hex  birds.mif  cook_sprite_pack.mif  fullsheet.mif  main.py
IF_STAGE/: IF_STAGE.v
ModuloControle/: ControleFunction.v  ControleInterface.v  ControleStateMachine.v  ModuloControle.qpf  ModuloControle.qsf
ModuloProcessador/: ALU.bsf  ALU.v  ALUControl.bsf  ALUControl.v  BranchFormat.v  ClockDivider.bsf  Control.bsf  Control.v  ControlMux.bsf  DataMemory.bsf  Divider.bsf  DividerPLL.bsf  DividerPLL.cmp  DividerPLL.qip  EX_MEM_Register.bsf  EX_MEM_Register.v  EX_STAGE.bdf  EX_STAGE.bsf  Extend_8to32b.v  FowardingUnit.v  HazardDetectionUnit.bsf  HazardDetectionUnit.v  ID_EX_Register.bsf  ID_STAGE.bdf  ID_STAGE.bsf  ID_STAGE.v  IF_ID_Register.bsf  IF_ID_Register.v  IF_STAGE.bdf  IF_STAGE.bsf  InstructionDecoder.bsf  InstructionMemory.bsf  InstructionMemory.v  MEM_STAGE.bsf  MEM_WB_Register.v  MemAddressFormat.bsf  ModuloProcessador.bdf  ModuloProcessador.qpf  ModuloProcessador.qsf  ModuloProcessador.qws  (+13 more)
ModuloVGAController/: EmbarcadoVGA.qsys  EmbarcadoVGA.sopcinfo  EmbarcadoVGA_tb.csv  EmbarcadoVGA_tb.spd  Makefile  Master_Interface.v  ModuloVgaController.bdf  ModuloVgaController.v  ModuloVgaControllerTB.v  clkDivider.bsf  clkDivider.cmp  clkDivider.ppf  clkDivider.qip  clkDivider.v  clkDivider.vhd  top.v  (+31 more)
(+1152 files in other folders)
